--- a/스터디.md
+++ b/스터디.md
@@ -1,1 +1,5 @@
-[스터디 하면서 TIL](https://github.com/lala9663/TWL/tree/main)
+## 공부 하는 내용들을 정리~
+
+- [스터디 하면서 TIL](https://github.com/lala9663/TWL/tree/main)
+- [CS면접 스터디](https://github.com/lala9663/TechInterviewStudy)
+- [코딩 테스트 스터디](https://github.com/lala9663/CodingReview/tree/main)
